--- a/css/styles.css
+++ b/css/styles.css
@@ -544,10 +544,10 @@ a {
 
 
  .filter-buttons {
-    display: flex;
-    padding-top:30px ;
-    padding-bottom: 30px;
-    gap: 30px;
+    
+    padding-top:94px ;
+    padding-bottom: 94px;
+   
  }
 
  .list .buttons {
@@ -590,9 +590,10 @@ a {
         font-weight: 700;
         font-size: 18px;
         line-height: 2;
-        letter-spacing: 0.06em;
+        letter-spacing: 0.03em;
         color: var(--title-text-color);
         margin: 0px;
+        margin-bottom: 4px;
  }
 
  .subscribing-text{
@@ -610,8 +611,8 @@ a {
   
     padding-bottom: 20px;
     padding-top: 20px;
-    padding-right: 12px;
-    padding-left: 12px;
+    padding-right: 24px;
+    padding-left: 24px;
     border-right: 1px solid #ECECEC;
     border-left: 1px solid #ECECEC;
     border-bottom: 1px solid #ECECEC;
